# zkFOAKS

./: README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: custom-issue.md  feature---bug-request.md  feature_request.md
.github/workflows/: rust.yml
R1CS/: README.md
R1CS/constraint_systems/: cs.txt  matrices.txt  sample_test.rs
R1CS/constraint_systems/docs/: DataStructure&Progress.md  MemoryCheck.md  MemoryOperationMatricesConfiguration.md
R1CS/cs_build/: Cargo.toml
R1CS/cs_build/src/: lib.rs  main.rs
R1CS/cs_build/src/data/: mem_test.json  tx_stack_table.json
R1CS/cs_build/src/groth16/: mod.rs  sample.rs
R1CS/cs_build/src/groth16_test/: mod.rs
R1CS/cs_build/src/mem_gen/: mem_gen.rs  mod.rs  r1cs_to_qap.rs  stack_gen.rs
R1CS/cs_build/src/r1cs/: constraint_system.rs  error.rs  impl_lc.rs  mod.rs  trace.rs
R1CS/src/groups/curves/short_weierstrass/: mod.rs
R1CS/src/groups/curves/twisted_edwards/: mod.rs
cs_build/src/: lib.rs  main.rs
cs_build/src/data/: test_mem_table.json  tx_mem_table.json
cs_build/src/mat_gen/: duplication.rs  mem_gen.rs  mod.rs  stack.rs  swap.rs
cs_build/src/mem_gen/: mem_gen.rs
cs_build/src/r1cs/: constraint_system.rs
foaks/: .gitignore  Cargo.toml  Makefile  c_0_r_weight.txt  d_0_r_weight.txt  d_0_weight.txt  d_1_r_weight.txt  d_1_weight.txt  d_r_weight.txt  encoded_codeword.txt  evaluate.txt  log.txt  pow.txt  q.txt  witness.txt
foaks/c++files/: c_0_neighbor.txt  c_0_r_neighbor.txt  c_0_weight.txt  c_1_neighbor.txt  c_1_r_neighbor.txt  c_1_r_weight.txt  c_1_weight.txt  coefs.txt  d_0_neighbor.txt  d_0_weight.txt  d_1_neighbor.txt  d_1_r_neighbor.txt  d_1_r_weight.txt  d_1_weight.txt  r_u_1.txt  r_u_2.txt  r_u_3.txt  r_u_4.txt  r_u_5.txt  r_u_6.txt  r_v_1.txt  r_v_2.txt  r_v_3.txt  r_v_4.txt  r_v_5.txt  r_v_6.txt  tmp_alpha.txt  tmp_beta.txt
foaks/commit_array/: Cargo.toml
foaks/commit_array/src/: commit_array.rs  lib.rs
foaks/enconde_test/: Cargo.toml  encode_test.rs
foaks/enconde_test/src/: encode_test.rs
foaks/examples/: Cargo.toml
foaks/examples/src/: lib.rs  univariate_PC_test.rs
foaks/global/: Cargo.toml
foaks/infrastructure/: Cargo.toml
foaks/infrastructure/src/: constants.rs  lib.rs  merkle_tree.rs  my_hash.rs  rs_polynomial.rs  utility.rs
foaks/intrinsics/: Cargo.toml
foaks/intrinsics/src/: lib.rs
foaks/linear_code/: Cargo.toml
foaks/linear_code/src/: expanders.rs  lib.rs  linear_code_encode.rs  parameter.rs
foaks/linear_gkr/: .gitignore  Cargo.toml  gen.cpp  readme.md
foaks/linear_gkr/linear_gkr_cpp_vigro/: main_zk.cpp  zk_prover.cpp  zk_verifier.cpp
foaks/linear_gkr/src/: circuit_fast_track.rs  lib.rs  main.rs  polynomial.rs  prover.rs  test_matmul.sh  verifier.rs
foaks/linear_gkr/src/LOG/: mat_128.txt  mat_16.txt  mat_32.txt  mat_64.txt
foaks/linear_gkr/src/circuit_fast_track/: mod.rs
foaks/linear_gkr/src/config/: mod.rs
foaks/linear_gkr/src/poly_commitment/: mod.rs
foaks/linear_gkr/src/polynomial/: lib.rs  mod.rs
foaks/linear_gkr/src/prime_field/: error.rs  mod.rs
foaks/linear_gkr/src/prover/: mod.rs
foaks/linear_gkr/src/verifier/: mod.rs
foaks/linear_pc/: Cargo.toml
foaks/linear_pc/src/: lib.rs  main.rs  parameters.rs  test.rs
foaks/poly_commitment/: Cargo.toml
foaks/poly_commitment/src/: lib.rs  poly_commitment.rs  test.rs  value_for_merkle.txt  vpd.rs
foaks/poly_commitment/src/vpd/: fri.rs  prover.rs  verifier.rs
foaks/prime_field/: Cargo.toml
foaks/prime_field/src/: constants.rs  error.rs  lib.rs  ops.rs
foaks/src/: 16_log_fftgkr.txt  encode_test.rs  lib.rs  log_fftgkr.txt  main.rs  utils.rs
foaks/vpd/: Cargo.toml
foaks/vpd/src/: fri.rs  lib.rs  prover.rs  verifier.rs
