[package]
name = "encode_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prime_field = { path = "../prime_field" }
linear_gkr = { path = "../linear_gkr" }
infrastructure = { path = "../infrastructure" }
poly_commitment = { path = "../poly_commitment" }
rand = "0.8.5"
lazy_static = "1.4.0"
bincode = "1.3.3"
ethnum = "1.2.2"
