[package]
name = "examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethnum = "1.2.2"
linear_gkr = { path = "../linear_gkr" }
prime_field = { path = "../prime_field" }
linear_code = { path = "../linear_code" }