[package]
name = "infrastructure"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

serde = { version = "1.0.143", features = ["serde_derive"] }
prime_field = { path = "../prime_field" }
global = { path = "../global" }

ring = "0.16.20" #Temp library
