[package]
name = "linear_gkr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.143", features = ["serde_derive"] }
bincode = "1.3.3"
ethnum = "1.2.2"
intrinsics = { path = "../intrinsics" }
