[package]
name = "linear_pc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
linear_gkr = { workspace = true }
infrastructure = { workspace = true }
prime_field = { workspace = true }
linear_code = { workspace = true, default-features = true }
rand = "0.8.5"

global = { workspace = true }
