[package]
name = "poly_commitment"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
infrastructure = { path = "../infrastructure" }
prime_field = { workspace = true }
global = { path = "../global" }
rayon = "1.6"
