[package]
name = "prime_field"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethnum = { workspace = true, default-features = true }
serde = { version = "1.0.143", features = ["serde_derive"] }
intrinsics = { path = "../intrinsics" }
bincode = "1.3.3"
rand = "0.8.5"
rayon = "1"
